# goda-rs

./: .gitignore  Cargo.toml  README.md
examples/simple/: Cargo.toml
examples/simple/src/: generated.rs  main.rs  operations.rs  schema.rs
goda/: Cargo.toml
goda-gen/: Cargo.toml
goda-gen/src/: main.rs  operation.rs  schema.rs
goda-gen/src/schema/: database.rs  definitions.rs
goda-gen/src/schema/definitions/: schema.rs
goda/src/: lib.rs  operation.rs  registry.rs
