[package]
name = "goda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "goda"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.68"
async-trait = "0.1.60"
http = "0.2.8"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"

[dev-dependencies]
async-graphql = "5.0.4"
tokio = { version = "1.23.0", features = ["full"] }