[package]
name = "simple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
async-graphql = "5.0.4"
async-recursion = "1.0.0"
async-trait = "0.1.60"
env_logger = "0.10.0"
futures = "0.3.25"
goda = { path = "../../goda" }
http = "0.2.8"
http-body-util = "0.1.0-rc.1"
hyper = { version = "1.0.0-rc.1", features = ["full"] }
log = "0.4.17"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
sha2 = "0.10.6"
tokio = { version = "1.23.0", features = ["full"] }

[dev-dependencies]
assert-json-diff = "2.0.2"